--- a/nac-hub-middleware-1.csproj
+++ b/nac-hub-middleware-1.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
+    <PackageReference Include="FirebaseAdmin" Version="2.4.0" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="3.3.0" />
+    <PackageReference Include="Google.Cloud.Firestore.V1" Version="3.3.0" />
+    <PackageReference Include="Google.Cloud.Firestore.Admin.V1" Version="3.3.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
